--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 llama-index = "^0.11.21"
+llama-index-llms-azure-openai = "^0.2.2"
+gradio = "^5.4.0"
 
 
 [build-system]
