--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 llama-index = "^0.11.21"
 llama-index-llms-azure-openai = "^0.2.2"
 gradio = "^5.4.0"
+loguru = "^0.7.2"
+psutil = "^6.1.0"
 
 
 [build-system]
